Fix security issues (part of) (#17)
* Add dependabot.yml

* Use arrays to build lines

* Fix zip slip in NativeLoader

* Fix conversions in multiple files